--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "eslint": "eslint ./src/",
     "start": "node ./src/index.js"
   },
+  "engines": {
+    "node": ">=18"
+  },
   "dependencies": {
     "@discordjs/builders": "^0.12.0",
     "@discordjs/rest": "^0.3.0",
